tests/derive/where.stderr
error: custom attribute panicked
 --> $DIR/where.rs:3:1
  |
3 | #[system(Test)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: run should not take generic arguments nor where clause.
